# deterministic-inference-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main-gate.yml  nightly.yml  pr-gate.yml  release-gate.yml
cmd/prover/: main.py
demos/proof-compare/: EXPERIMENT_LOG.md  build_all.py  prove_partition.py
demos/spec-decode/: EXPERIMENT_LOG.md  demo.sh  spec_decode.py
demos/tap-protocol/: EXPERIMENT_LOG.md  sample-events.json  viewer.html
docs/conformance/: SPEC_REVIEW.md
experiments/prover-verifier-demo/: EXPERIMENT_LOG.md  demo.sh
experiments/task-graph-prototype/: .gitignore  EXPERIMENT_LOG.md  demo.sh  plan.md  viewer.html
experiments/task-graph-prototype/validator/: Cargo.toml
experiments/task-graph-prototype/validator/src/: canonical.rs  checks.rs  crypto.rs  lib.rs  types.rs
modules/: README.md  pipeline.py
modules/inference/: api.py
modules/network/: api.py
modules/proof_server/: README.md  api.py  graph.py  partition.py  task_graph.py
modules/utils/: README.md  api.py
pkg/proverdet/: capture.py  scheduler.py
scripts/: demo.sh
scripts/ci/: d6_multinode_determinism.sh
tests/integration/: test_prover_replay_endpoint.py  test_verifier_scheduler_against_prover.py
tests/unit/: test_build_all.py  test_coding_agent_harness.py  test_coding_tracer.py  test_graph.py  test_harness_uniformity.py  test_partition.py  test_sp1_partition_smoke.py  test_spec_capture.py  test_tap_run_protocol.py  test_task_graph.py  test_training_tracer.py  (+1 more)
workflows/: README.md  RECIPE_BOOK.md  deterministic_lora_training.py  verified_inference.py
(+78 files in other folders)
